oxiplate/tests/crates/escaper-without-default-escaper-group/tests/broken/escaper-without-default-escaper-group.stderr
error: No default escaper group defined and the specified escaper is not "raw". Consider setting a value for `fallback_escaper_group` in `/oxiplate.toml`, or turn on the `built-in-escapers` Oxiplate feature.
 --> tests/broken/escaper-without-default-escaper-group.rs:4:29
  |
4 | #[oxiplate_inline(html: "{{ text: message }}")]
  |                             ^^^^
